--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@
 <p>很高兴你能来此，你可以在以下的网站找到我。</p>
 
 <ul>
-  <li> <a href="https://www.zhihu.com/peoole/david-72-45">知乎</a> </li>
+  <li> <a href="https://space.bilibili.com/636293407?spm_id_from=333.1007.0.0">B站</a> </li>
 </ul>
